--- a/src/pages/Admin/Admin.scss
+++ b/src/pages/Admin/Admin.scss
@@ -756,6 +756,25 @@
       height: 100%;
       object-fit: cover;
     }
+
+    &--logo {
+      height: 150px;
+      background-color: var(--bg-surface);
+      padding: map-get($spacings, 2);
+
+      @include respond-to(sm) {
+        height: 200px;
+        max-width: 300px;
+      }
+
+      img {
+        width: auto;
+        height: auto;
+        max-width: 100%;
+        max-height: 100%;
+        object-fit: contain;
+      }
+    }
   }
 
   &__photo-placeholder {
