style: reduce logo width to 40px in header
Changed logo size from height-based (40px) to width-based (40px):
- Updated .header__logo-image to use width: 40px instead of height: 40px
- Added max-width: 40px for consistency
- Height now auto-adjusts to maintain aspect ratio

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -34,8 +34,8 @@
 
       .header__logo-image {
         display: block !important;
-        height: 40px;
-        width: auto;
+        width: 40px;
+        height: auto;
         object-fit: contain;
       }
     }
@@ -47,8 +47,9 @@
 
   &__logo-image {
     display: none;
-    max-height: 40px;
-    width: auto;
+    width: 40px;
+    height: auto;
+    max-width: 40px;
     object-fit: contain;
   }
 
