--- a/src/pages/TestimonialForm/TestimonialForm.scss
+++ b/src/pages/TestimonialForm/TestimonialForm.scss
@@ -2,6 +2,33 @@
   padding: map-get($spacings, 6) 0;
   min-height: 80vh;
 
+  &__theme-toggle-wrapper {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: map-get($spacings, 4);
+  }
+
+  &__theme-toggle {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    background: none;
+    border: 1px solid var(--border-color);
+    padding: map-get($spacings, 1) map-get($spacings, 2);
+    border-radius: 4px;
+    cursor: pointer;
+    @include transition(background-color, border-color);
+
+    &:hover {
+      background-color: var(--bg-muted);
+    }
+
+    .theme-icon {
+      font-size: 1.25rem;
+      line-height: 1;
+    }
+  }
+
   &__header {
     text-align: center;
     margin-bottom: map-get($spacings, 6);
